Add horizontal lines at the game field.

--- a/index.html
+++ b/index.html
@@ -59,9 +59,21 @@
 
         <div class="elements">
             <div class="game_field">
+                <div class="horizontal">
+                    <hr width=100% size="2" color="black"/>
+                    <hr width=100% size="2" color="black"/>
+                    <hr width=100% size="2" color="black"/>
+                    <hr width=100% size="2" color="black"/>
+                    <hr width=100% size="2" color="black"/>
+                    <hr width=100% size="2" color="black"/>
+                    <hr width=100% size="2" color="black"/>
+                    <hr width=100% size="2" color="black"/>
+                    <hr width=100% size="2" color="black"/>
+                </div>
             </div>
         </div>
-    </div>
+
+    </div>+
 </body>
 <script src="script.js"></script>
 </html>
