Add vertical lines at the game field.

--- a/index.html
+++ b/index.html
@@ -60,20 +60,25 @@
         <div class="elements">
             <div class="game_field">
                 <div class="horizontal">
-                    <hr width=100% size="2" color="black"/>
-                    <hr width=100% size="2" color="black"/>
-                    <hr width=100% size="2" color="black"/>
-                    <hr width=100% size="2" color="black"/>
-                    <hr width=100% size="2" color="black"/>
-                    <hr width=100% size="2" color="black"/>
-                    <hr width=100% size="2" color="black"/>
-                    <hr width=100% size="2" color="black"/>
-                    <hr width=100% size="2" color="black"/>
+                    <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
+
                 </div>
+                <div class="vertical">
+                    <div class="vl"></div>
+                    <div class="vl"></div>
+                    <div class="vl"></div>
+                    <div class="vl"></div>
+                    <div class="vl"></div>
+                    <div class="vl"></div>
+                    <div class="vl"></div>
+                    <div class="vl"></div>
+                    <div class="vl"></div>
+                </div>
+
             </div>
         </div>
 
-    </div>+
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
