Add imitation indicators. Add flexibility to <div class="ship_condition">.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <div class="container">
+
+
         <div class="elements">
             <div class="count_elements">
                 <div class="counters">
@@ -28,37 +30,54 @@
 
                 <div class="ship_division">
                     <div class="ship_condition">
-                        <img class="img" id="aircraft" src="images/Aircraft%20Shape.png" alt="">
-<!--                        Здесь должен быть счётчик подбитий корабля-->
+                        <img class="img1" id="aircraft" src="images/Aircraft%20Shape.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
+                    </div>
+
+
+                    <div class="ship_condition">
+                        <img class="img1" id="battleship" src="images/Battleship%20Shape.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
+
                     </div>
 
                     <div class="ship_condition">
-                        <img class="img" id="battleship" src="images/Battleship%20Shape.png" alt="">
-<!--                        <img class="img" id="indicator" src="images/m_Miss%20small.png" alt="">-->
-                    </div>
-
-                    <div class="ship_condition">
-                        <img class="img" id="cruiser" src="images/Cruiser%20Shape.png" alt="">
+                        <img class="img1" id="cruiser" src="images/Cruiser%20Shape.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
 
                     </div>
 
                     <div class="ship_condition">
-                        <img class="img" id="submarine" src="images/Submarine%20Shape.png" alt="">
-
+                        <img class="img1" id="submarine" src="images/Submarine%20Shape.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
                     </div>
 
                     <div class="ship_condition">
-                        <img class="img" id="carrier" src="images/Carrier%20Shape.png" alt="">
-
+                        <img class="img1" id="carrier" src="images/Carrier%20Shape.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
+                        <img class="indicator" src="images/m_Miss%20small.png" alt="">
                     </div>
-
 
                 </div>
             </div>
         </div>
 
         <div class="elements">
+
             <div class="game_field">
+
+
                 <div class="horizontal">
                     <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
 
@@ -81,4 +100,7 @@
     </div>
 </body>
 <script src="script.js"></script>
+
 </html>
+
+
