Refactor sections at the game field. Add script fr finding coordinates.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
     <div class="container">
 
-
         <div class="elements">
             <div class="count_elements">
                 <div class="counters">
@@ -76,29 +75,316 @@
         <div class="elements">
 
             <div class="game_field">
-
-
-                <div class="horizontal">
-                    <hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
-
+                <div class="section" id="l0c0">
+<!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
                 </div>
-                <div class="vertical">
-                    <div class="vl"></div>
-                    <div class="vl"></div>
-                    <div class="vl"></div>
-                    <div class="vl"></div>
-                    <div class="vl"></div>
-                    <div class="vl"></div>
-                    <div class="vl"></div>
-                    <div class="vl"></div>
-                    <div class="vl"></div>
+                <div class="section" id="l0c1">
+<!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
                 </div>
+                <div class="section" id="l0c2">
+<!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l0c3">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l0c4">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l0c5">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l0c6">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l0c7">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l0c8">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l0c9">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l1c0">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l1c1">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l1c2">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l1c3">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l1c4">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l1c5">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l1c6">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l1c7">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l1c8">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l1c9">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l2c0">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="lc1">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l2c2">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l2c3">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l2c4">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l2c5">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l2c6">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l2c7">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l2c8">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l2c9">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l3c0">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l3c1">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l3c2">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l3c3">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l3c4">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l3c5">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l3c6">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l3c7">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l3c8">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l3c9">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l4c0">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l4c1">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l4c2">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l4c3">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l4c4">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l4c5">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l4c6">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l4c7">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l4c8">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l4c9">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l5c0">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l5c1">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l5c2">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l5c3">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l5c4">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l5c5">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l5c6">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l5c7">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l5c8">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l5c9">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l6c0">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l6c1">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l6c2">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l6c3">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l6c4">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l6c5">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l6c6">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l6c7">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l6c8">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l6c9">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l7c0">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l7c1">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l7c2">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l7c3">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l7c4">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l7c5">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l7c6">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l7c7">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l7c8">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l7c9">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l8c0">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l8c1">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l8c2">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l8c3">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l8c4">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l8c5">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l8c6">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l8c7">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l8c8">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l8c9">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l9c0">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l9c1">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l9c2">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l9c3">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l9c4">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l9c5">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l9c6">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l9c7">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l9c8">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+                <div class="section" id="l9c9">
+                    <!--                    <img class="section_pic" src="images/black%20x.png" alt="">-->
+                </div>
+
 
             </div>
         </div>
 
     </div>
+
+
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="script.js"></script>
 
 </html>
